--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
-    "inquirer": "^8.2.4"
+    "inquirer": "^8.2.4",
+    "uuid": "^9.0.1"
   }
 }
